[gd_scene load_steps=15 format=2]

[ext_resource path="res://blue.png" type="Texture" id=1]
[ext_resource path="res://focus.png" type="Texture" id=2]
[ext_resource path="res://Cell.gd" type="Script" id=3]
[ext_resource path="res://gate_close.png" type="Texture" id=4]
[ext_resource path="res://gate_open.png" type="Texture" id=5]
[ext_resource path="res://Redkost Comic.otf" type="DynamicFontData" id=6]
[ext_resource path="res://green.png" type="Texture" id=7]
[ext_resource path="res://red.png" type="Texture" id=8]
[ext_resource path="res://gray.png" type="Texture" id=9]
[ext_resource path="res://yellow.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=2]

[sub_resource type="CapsuleShape2D" id=3]
radius = 39.9999
height = 40.0002

[sub_resource type="DynamicFont" id=4]
size = 28
outline_size = 1
font_data = ExtResource( 6 )

[node name="Cell" type="StaticBody2D"]
z_index = 1
input_pickable = true
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
script = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Focus" type="Sprite" parent="."]
visible = false
position = Vector2( 0.499996, -3.57628e-06 )
scale = Vector2( 1.00893, 0.921348 )
texture = ExtResource( 2 )

[node name="Count" type="Label" parent="."]
margin_left = -45.0
margin_top = -34.0
margin_right = 47.0
margin_bottom = 23.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gate1_close" type="Sprite" parent="."]
position = Vector2( -18, 18 )
texture = ExtResource( 4 )

[node name="Gate2_close" type="Sprite" parent="."]
position = Vector2( 0, 18 )
texture = ExtResource( 4 )

[node name="Gate2_open" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 18 )
texture = ExtResource( 5 )

[node name="Gate1_open" type="Sprite" parent="."]
visible = false
position = Vector2( -18, 18 )
texture = ExtResource( 5 )

[node name="Gate3_close" type="Sprite" parent="."]
position = Vector2( 18, 18 )
texture = ExtResource( 4 )

[node name="Gate3_open" type="Sprite" parent="."]
visible = false
position = Vector2( 18, 18 )
texture = ExtResource( 5 )
